revisao 15 de fevereiro

--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <p>Dienyfer Laisa Justino</p>
     <p>Lucas Evarista</p>
     <ul>
+        <li>Netflix</li>
+        <li>Amazon</li>
+        <li>Mubi</li>
+        <li>HBO</li>
+        <li>Star +</li>
+        <li>Disney</li>
+    </ul>
+    <ol>
+        <li>Netflix</li>
+        <li>Amazon</li>
+        <li>Mubi</li>
+        <li>HBO</li>
+        <li>Star +</li>
+        <li>Disney</li>
+    </ol>
+    <ul>
         <li>Empresa</li>
         <li>Produto</li>
         <li>Serviços</li>
