--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Grace Lara Barros Toebe</p>
     <p>Dienyfer Laisa Justino</p>
     <p>Lucas Evarista</p>
-    <ul>
+    <ul type="square">
         <li>Netflix</li>
         <li>Amazon</li>
         <li>Mubi</li>
@@ -18,7 +18,7 @@
         <li>Star +</li>
         <li>Disney</li>
     </ul>
-    <ol>
+    <ol type="a">
         <li>Netflix</li>
         <li>Amazon</li>
         <li>Mubi</li>
