--- a/index.html
+++ b/index.html
@@ -57,16 +57,33 @@
         <li>Em uma panela, coloque a manteiga, o tomate, a cebola e o tempero em pó do macarrão instantâneo para fritar, sempre mexendo bem para não empelotar.</li>
         <li>Depois despeje o creme de leite e misture o molho ao macarrão instantâneo.</li>
     </ol>
+    <hr>
     <dl>
-        <dt>Teste</dt>
-        <dd>trabalheira</dd>
-        <dd>trabalheia</dd>
-        <dt>Teste</dt>
-        <dd>trabalheira</dd>
-        <dd>trabalheia</dd>
+        <dt>Streamings</dt>
+        <dd>Netflix</dd>
+        <dd>Amazon</dd>
+        <dd>HBO</dd>
+        <dd>Mubi</dd>
+        <dd>Disney</dd>
+        <dd>Star+</dd>
     </dl>
-    <table>
-        <th></th>
+    <hr>
+    <table border="1">
+        <tr><!--início da linha do cabeçalho-->
+            <th>Cabeçalho 1</th>
+            <th>Cabeçalho 2</th>
+            <th>Cabeçalho 3</th>
+        </tr>
+        <tr><!--início da primeira linha-->
+            <td>Linha 1</td>
+            <td>Linha 2</td>
+            <td>Linha 3</td>
+        </tr>
+        <tr><!--início da segunda linha-->
+            <td>Linha 1</td>
+            <td>Linha 2</td>
+            <td>Linha 3</td>
+        </tr>
     </table>
 
 </body>
