--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
             <td>Linha 3</td>
         </tr>
     </table>
+    <hr>
+    <table border="1">
+        <tr>
+            <th>Frutas</th>
+            <th>Verduras</th>
+            <th>Legumes</th>
+        </tr>
+        <tr>
+            <td>Maçã</td>
+            <td>Alface</td>
+            <td>Amendoim</td>
+        </tr>
+        <tr>
+            <td>Laranja</td>
+            <td>Couve</td>
+            <td>Trigo</td>
+        </tr>
+    </table>
 
 </body>
 </html>
