--- a/index.html
+++ b/index.html
@@ -103,6 +103,32 @@
             <td>Trigo</td>
         </tr>
     </table>
+    <hr>
+    <form>
+        <fieldset>
+        <legend>Tamanho de camisetas</legend>
+        <hr3>Masculino</hr3>
+        <input type="radio" name="genero" value="masculino">
+        <hr3>Feminino</hr3>
+        <input type="radio" name="genero" value="feminino">
+        <hr3>Outro</hr3>
+        <input type="radio" name="genero" value="outro">
+        <p>Qual a sua faixa etária?</p>
+        <input type="radio" name="idade" value="18-25">Entre 18 e 25 anos<br>
+        <input type="radio" name="idade" value="18-25">Entre 25 e 35 anos
+        <div>Aceita termos e condições?</div>
+        <input type="checkbox" name="aceita" value="1">Sim<br>
+        <input type="checkbox" name="aceita" value="1">Não<br>
+        <select name="tamanhos">
+            <option value="G">Grande</option>
+            <option value="M">Médio</option>
+            <option value="P">Pequeno</option>
+        </select>
+        <label for="nome_sobrenome">Nome</label>
+        <input type="text" name="nome_sobrenome" placeholder="Digite seu nome">
+        <button type="submit">Enviar</button>
+        </fieldset>
+    </form>
 
 </body>
 </html>
