--- a/index.html
+++ b/index.html
@@ -130,5 +130,20 @@
         </fieldset>
     </form>
 
+<h1>Uso de links</h1>
+
+<!--Links relativos-->
+<a href="pages/produtos.html">Produtos</a>
+<a href="pages/contato.html">Contato</a>
+<br>
+<a href="#topo">vá ao topo da página</a>
+<br>
+
+<img src="/image/como-cuidar-de-um-vira-lata-caramelo-petlove.jpg" alt="Cachorro caramelo">
+<a href="https://www.instagram.com/ammora.design/" target="_blank">
+    <img src="image/vira-lata-caramelo-cao.jpg" alt="Teste botão link"/>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HX2pfCRW-pI?si=eTvUVovpntHESVeK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</a>
+
 </body>
 </html>
