--- a/aula_7.html
+++ b/aula_7.html
@@ -6,27 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>produtos</li>
-            <li>serviços</li>
-            <li>sobre nós</li>
-            <li>contato</li>
-        </ul>
-    </nav>
-    <aside>    <nav>
-        <ul>
-            <li>produtos</li>
-            <li>serviços</li>
-            <li>sobre nós</li>
-            <li>contato</li>
-        </ul>
-    </nav>
-</aside>
-    <header>
+    <header style="background-color: aqua;">
         <h1>Cabeçalho</h1>
     </header>
-<section>
+    <nav style="background-color: blueviolet;">
+        <p>Netflix</p><p>Amazon</p><p>HBO</p>
+    </nav>
+<section style="background-color: beige;">
     <article>
         <h2>Seção 1</h2>
             <p>Teste teste teste</p>
@@ -34,5 +20,16 @@
             <p>Teste teste teste</p>
     </article>
 </section>
+<footer style="background-color: aquamarine;">
+    <nav>
+        <h2>footer</h2>
+        <ul>
+            <li>produtos</li>
+            <li>serviços</li>
+            <li>sobre nós</li>
+            <li>contato</li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
